Update Python Project for DS.ipynb

--- a/Python Project for DS.ipynb
+++ b/Python Project for DS.ipynb
@@ -187,9 +187,9 @@
     "    title=stock,\n",
     "    xaxis_rangeslider_visible=True)\n",
     "    fig.show()\n",
-    "    #from IPython.display import display, HTML -- we only use fig.show()\n",
-    "    #fig_html = fig.to_html()\n",
-    "    #display(HTML(fig_html))"
+    "    from IPython.display import display, HTML \n",
+    "    fig_html = fig.to_html()\n",
+    "    display(HTML(fig_html))"
    ]
   },
   {
